@@ -17,7 +17,7 @@ return {
 		footprintz = 2,
 		idleautoheal = 5,
 		idletime = 1800,
-		maxdamage = 290,
+		maxdamage = 270,
 		maxslope = 17,
 		maxvelocity = 2.8,
 		maxwaterdepth = 25,
@@ -129,7 +129,7 @@ return {
 				laserflaresize = 4.4,
 				name = "Laser",
 				noselfdamage = true,
-				range = 240,
+				range = 230,
 				reloadtime = 0.5,
 				rgbcolor = "1 0 0",
 				soundhitdry = "",
